.metadata/.plugins/org.eclipse.cdt.ui/comms_pokus.build.log
16:22:56 **** Incremental Build of configuration Debug for project comms_pokus ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F303x8 -c -I../Core/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:41:24: error: 'huart2' undeclared (first use in this function)
   41 |     HAL_UART_Transmit(&huart2, (uint8_t*)message, strlen(message), HAL_MAX_DELAY);
      |                        ^~~~~~
../Core/Src/main.c:41:24: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:41:51: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
   41 |     HAL_UART_Transmit(&huart2, (uint8_t*)message, strlen(message), HAL_MAX_DELAY);
      |                                                   ^~~~~~
../Core/Src/main.c:3:1: note: include '<string.h>' or provide a declaration of 'strlen'
    2 | #include "stdio.h"
  +++ |+#include <string.h>
    3 | //#include "i2c.h"
../Core/Src/main.c:41:51: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
   41 |     HAL_UART_Transmit(&huart2, (uint8_t*)message, strlen(message), HAL_MAX_DELAY);
      |                                                   ^~~~~~
../Core/Src/main.c:41:51: note: include '<string.h>' or provide a declaration of 'strlen'
../Core/Src/main.c: In function 'SystemClock_Config':
../Core/Src/main.c:62:24: error: 'RCC_PLLInitTypeDef' has no member named 'PLLDIV'
   62 |   RCC_OscInitStruct.PLL.PLLDIV = RCC_PLLDIV_2;
      |                        ^
In file included from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_def.h:30,
                 from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_rcc.h:27,
                 from ../Core/Inc/stm32f3xx_hal_conf.h:199,
                 from ../Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal.h:29,
                 from ../Core/Src/main.c:1:
../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h:3622:37: error: 'RCC_PLL_DIV2' undeclared (first use in this function); did you mean 'RCC_PLLDIV_2'?
 3622 | #define RCC_PLLDIV_2                RCC_PLL_DIV2
      |                                     ^~~~~~~~~~~~
../Core/Src/main.c:62:34: note: in expansion of macro 'RCC_PLLDIV_2'
   62 |   RCC_OscInitStruct.PLL.PLLDIV = RCC_PLLDIV_2;
      |                                  ^~~~~~~~~~~~
../Core/Src/main.c:69:7: warning: implicit declaration of function 'HAL_PWREx_EnableOverDrive'; did you mean 'HAL_PWREx_ActivateOverDrive'? [-Wimplicit-function-declaration]
   69 |   if (HAL_PWREx_EnableOverDrive() != HAL_OK)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
      |       HAL_PWREx_ActivateOverDrive
../Core/Src/main.c: At top level:
../Core/Src/main.c:11:13: warning: 'MX_GPIO_Init' used but never defined
   11 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

16:22:57 Build Failed. 4 errors, 4 warnings. (took 305ms)

